DigIt CHANGE LOG
======================

2025/10/07 Added Waiting for Source Connection Dialog;
           Added CancelVisible default param to Bridge_Impl ProgressShow;
           Added ProgressShowWaiting to Bridge_Impl;
           Changed actTakeBuildDuplex Caption;
           Changed some Italian translation;

2025/09/22 Fixed Folder Source Bug with only one file;
           ExportFiles use new FCL-PDF for Sizes (to test);
           UI Adjusted some Captions and Translations;
           UI Added ToolBar reposition and size calculation;

        05 Deleted Menu Profiles OnPopup (updated in Profiles Edit);
           Added Source_Select with Profiles in MainForm;
           Added Selected Source in MainForm Caption;
           Moved Get Source+Params Title in new TDigIt_Sources.GetTitle;
           Code cleanup;

        04 Solved DigIt_Profiles_Form don't Copy tmp XML to profiles File;
           TDigIt_Sources.Get with SubIndex must select sub item before GetFromUser;
           BuildSourceMenu Use SourceItems.RefreshList intestead of GetCount (to test)

2025/08/28 TDigIt_Sources.Get parameter list has been standardized;
           TDigIt_Sources.Get Added CreateParams param;
           TDigIt_Sources.Select always Create a new Params;
           FormProfiles always create our copy of Params and free it;

        27 Fix RefCount Exception in theBridge;
           Completed Profiles separation from UI (derived from TOpenArrayString);
           Completed FormProfiles (need some fix);
           Twain e WIA Files derived from TOpenArrayString;
           Change method name IDigIt_Params.OnSelected to Select;

        22 Edit Profiles with new TDigIt_Sources (does not work);

        21 Added TDigIt_Source_Common classes;
           Derived all Sources from TDigIt_Source_Common;

        20 Added Init,Release methods and Renamed OnSet to OnSelected in IDigIt_Params;
           Added Multiple Params Handle in IDigIt_Interface (Params_New, Params_Set);